--- a/2021/lectures/01-intro/01-intro.tex
+++ b/2021/lectures/01-intro/01-intro.tex
@@ -930,7 +930,7 @@ Partial credit depending on:
 
 \begin{frame}
 
-\frametitle{Exam and quizzes (10\% + 20\% of grade)}
+\frametitle{Exam and quizzes (20\% + 10\% of grade)}
 
 In-class quizzes every 1-2 weeks
 \begin{itemize}
@@ -963,6 +963,7 @@ Final exam
   \end{itemize}
   \item Answer the Piazza poll about office hours time slots
   \item Read the syllabus carefully, ask questions
+  \item Look over the lecture notes on the website
 \end{enumerate}
 
 \end{frame}
