--- a/2021/lectures/02-prop.tex
+++ b/2021/lectures/02-prop.tex
@@ -5,7 +5,7 @@
 \newcommand{\lecid}{15-316}
 \newcommand{\leccourse}{Software Foundations of Security and Privacy}
 \newcommand{\lecdate}{} %e.g. {October 21, 2013}
-\newcommand{\lecnum}{2}
+\newcommand{\lecnum}{2, 3}
 \newcommand{\lectitle}{Propositional Logic and Proofs\footnote{Based on lecture notes written by Andr\'e Plazter}}
 \newcommand{\lecturer}{Matt Fredrikson}
 \newcommand{\lecurl}{https://15316-cmu.github.io/index}
