--- a/2021/lectures/14-sidechan.tex
+++ b/2021/lectures/14-sidechan.tex
@@ -13,6 +13,7 @@
 \usepackage{varwidth}
 \usepackage{lecnotes}
 \usepackage[irlabel]{bugcatch}
+\usepackage[square,sort,comma]{natbib}
 
 \usepackage{tikz}
 \usetikzlibrary{automata,shapes,positioning,matrix,shapes.callouts,decorations.text,patterns,decorations.pathreplacing}
@@ -88,40 +89,69 @@ If the attacker is able to make observations that are influenced by any of these
 
 \section{Revisiting \keywordfont{match}}
 
-Let's return to the \textbf{match} function that we've discussed several times before. Suppose that we chose to implement a version called \texttt{fastmatch} that compares two lists for equality in the following way.
+Let's return to the \textbf{match} function that we've discussed several times before. 
+Suppose that we chose to implement a version called \texttt{fastmatch} that compares two arrays, and stops as soon as it sees two entries that don't match.
+This implementation also returns immediately if the lengths of the two input arrays don't match---very fast!
 \\[-1ex]
 
 \begin{lstlisting}
-i = 0;
-auth := 1;
-while(i < len) {
-	if(pin(i) != guess(i)) {
-		auth := 0;
-		i := len;
-	}
-	i := i + 1;
+bool fastmatch(byte a[], size_t a_len, byte b[], size_t b_len) {
+
+  if(a_len != b_len) return false;
+
+  for (size_t i = 0; i < a_len; i++)
+    if (a[i] != b[i]) return false;
+ 
+  return true;
 }
 \end{lstlisting}
 
-Is anything wrong with this implementation? Not according to the semantics we've studied previously. We can declassify the output of this function, and the only way an attacker can misuse the result to leak a secret is by making an exponential number of calls to this code.
+Recall our discussion from a few lectures ago, where we reasoned that it is generally safe to leak the output of such a function, even in cases where one of the inputs is secret, because an attacker needs to call it in exponential number of times (in the size of its secret input) to learn the secret.
+However, if we change the attacker's \emph{observation model} to include the amount of time it takes this code to complete, then the story changes. For now we'll just think of timing as the number of execution steps (informally defined at the moment) that it takes to execute the program. Obviously, obtaining such exact information in practice may be difficult, but this simplification will help us see the big picture first.
 
-However, if we change the attacker's \emph{observation model} to include the amount of time it takes the code to complete, then the story changes. For now we'll just think of timing as the number of execution steps (informally defined at the moment) that it takes to execute the program. Obviously, obtaining such exact information in practice may be difficult, but this simplification will help us see the big picture first.
-
-Let's break this down further to see what information can be learned from this new observation.
+Let's break this down further to see what information can be learned from this new type of observation.
+Throughout our discussion, assume that $\mathtt{a}$ is the secret, and $\mathtt{b}$ is the attacker's guess.
 \begin{itemize}
-\item When the values differ on their first element, the function will return immediately. This is the least amount of time \texttt{fastmatch} can take.
-\item When the inputs are the same, \texttt{fastmatch} will execute the longest.
+\item When \verb'a_len' and \verb'b_len' differ, then the function returns immediately (say, in 1 ``step'', as it needed to compare the two arguments).
+\item When \verb'a_len = b_len' but \verb'a[0] != b[0]', then the function still returns quickly, but note that it still needed to set \verb'i = 0', check \verb'i < a_len', and compare \verb'a[0]' with \verb'b[0]'. Following our simplistic notion of timing, this returns in four steps.
+\item When the inputs are identical, \texttt{fastmatch} will execute the longest. Each iteration of the loop comprises four steps (counting the increment \verb'i++' as one step), so including the initial comparison, this amounts to \verb'1 + 4*len' steps.
 \end{itemize}
-Combining these two facts, the attacker knows that the longer \texttt{fastmatch} executes, the more elements they have successfully guessed at the beginning of the list.
-Can we use this intuition to significantly decrease the exponential-time bound we studied last week? Consider the following attack, where $N$ is the number of possible characters that each position in a password or PIN number can take. We'll assume that this is finite, such as 10 or 256 (i.e., lists of digits or ASCII characters) or $2^{64}$ (i.e., machine integers).
+
+Thus, the attacker knows that the longer \texttt{fastmatch} executes, the more elements they have successfully guessed at the beginning of the list.
+Rather than simply learning whether their guess differs at all from the secret value, the attacker can now learn \emph{how much} their guess differs from the secret.
+There is one subtlety, which is that this is only true when the similarity follows from the low to high indices; for example, they learn quite a bit about the password \verb'weak' when they provide the guess \verb'weaa', but less with the guess \verb'aeak', despite the comparable differences.
+
+Let's think about how to leverage this leakage to reduce the attacker's work from $O(2^k)$ to $O(k)$ (here $k$ is the length of the secret).
+Consider the following attack, where $N$ is the number of possible characters that each position in a password or PIN number can take.
+For the program above, this is $256$, because each character is a byte.
 \begin{enumerate}
-	\item First try all one-character passwords ``$x_1$'', where $x$ is one of the possible values taken at indices of the password. Note the amount of time taken for \keywordfont{fastmatch} to return in a fresh variable $t_{x_1}$.
-	\item Take the first character of the password $p(0)$ to be $\argmax_x t_{x_1}$, i.e. the character that took the longest for \keywordfont{fastmatch} to terminate on.
-	\item Now try all two-character passwords ``$p(0)x_2$'' obtained by appending each possible character to the value decided for the first character.
-	\item As before, when done enumerating all two-character passwords that begin with the decided prefix $p(0)$, update the prefix $p(0)p(1)$ to $\argmax_x t_{x_1} + t_{x_2}$.
-	\item Continue appending characters that result in the longest execution of \keywordfont{fastmatch} until $\mathit{auth} = 1$ when it finishes.
+  \item First the attacker learns the length of the secret. They provide guesses \verb'a', \verb'aa', \verb'aaa', \ldots, until they observe greater than 1 step of time from \verb'fastmatch'.
+	
+  \item Knowing the length of the secret, they try all $N$ variants of the guess: $x$\verb'aa'\ldots, where $x$ is one of the $N$ possible first characters. They store the amount of time that \verb'fastmatch' took on each guess in $t^0_x$, and conclude that,
+  \[
+  \mathtt{b[0]} = \argmax_x t^0_x
+  \]
+	
+  \item They continue with the second element, guessing all $N$ variants of \verb'b[0]'$x$\verb'aa'\ldots, and again take the one that required the greatest number of steps (execution time) to return.
+	
+  \item Continue appending characters that result in the longest execution of \keywordfont{fastmatch} until it returns \verb'true' when it finishes.
 \end{enumerate}
-What is the complexity of this attack? Let $L$ be the length of the high-security PIN/password, and we'll assume that elements are coded in binary so there are $\log(N)$ bits in each element. The brute-force approach that would have been necessary without the timing information required $2^{L\log(N)} = N^L$ queries. With timing information, each element takes exactly $N$ guesses to find, and so now the attack will finish in $LN$ queries to \texttt{fastmatch}. In short, timing information reduced an exponential attack into a linear one. Obviously this poses a serious problem.
+What is the complexity of this attack? Assuming that elements are coded in binary so there are $\log(N)$ bits in each element, recall that the brute-force approach that would have been necessary without the timing information required $2^{\mathtt{a\_len}\cdot\log(N)} = N^\mathtt{a\_len}$ queries. 
+With the timing information in our example, i.e. the exact number of steps needed to return, each element takes at most $N$ guesses to find, and so now the attack will finish in $\mathtt{a\_len}\cdot N$ queries to \texttt{fastmatch}. 
+In short, timing information reduced an exponential attack into a linear one.
+
+\paragraph{Ramifications.}
+In practice, it may seem as though this isn't a problem. 
+Attackers can't know actual number of instructions executed by a program, and it may seem that the actual timing differences of a few additional comparison operations will hardly be distinguishable on real systems.
+Also, how often is an equality comparison pivotal for truly secret data or secure operation?
+
+Many have studied the first question, and the results have shown consistently and overwhelmingly that timing differences introduced by just a handful of instructions are in fact distinguishable---even over the Internet!
+\citeauthor{crosby09} found that by observing multiple runs, on the order of hundreds or a few thousands, timing differences as small as 20$\mu$s could be reliably distinguished over the open Internet, whereas on a less-noisy LAN timings as small as 100 nanoseconds are distinguishable.
+
+Regarding the second issue, equality comparisons crop up all over the place, and in some cases if you simply make use of the built-in  equality operator in languages like Python, you may be using an optimized implementation like \verb'fastmatch'.
+The developers of Keyczar, a recently-deprecated crypto library from Google, learned this when they made use of built-in comparison functions in Python and Java to verify hash-based message authentication codes (HMAC's)~\citet*{lawson09}.
+In short, their use of a leaky comparison function enabled attackers to forge authenticated messages with a few million queries over the Internet.
+While this may seem like a lot, it is a modest cost in absolute terms, and not sufficient to protect real systems.
 
 \section{Side-channel information leaks}
 
@@ -397,16 +427,22 @@ Let's think about how to fix the timing channel in \texttt{fastmatch}. We can th
 
 Looking at the code of \keywordfont{fastmatch}, notice first that the number of loop iterations is now bounded by \texttt{len}, which we'll assume to be non-secret. Where does the secret-dependent control flow come into play? The conditional statement inside the loop has a guard that mentions \texttt{h}, so we see that different values of \texttt{h} could lead to different control paths. In order to fix this, we'll obviously need to remove the conditional statement, so that the same sequence of instructions is executed regardless of the value of \texttt{h}. The only subtlety is that the output of \texttt{fastmatch} must depend on \texttt{h}, so we need to find a reasonable way to ensure that the outcome is the same as before.
 
-One way of accomplishing this is to carry the computation of the loop forward through to the greatest number of iterations the loop can take. Looking at \texttt{fastmatch}, we can think of it as nothing more than an aggregate of Boolean expressions: when all of the $\mathit{pin}(i) = \mathit{guess}(i)$, for $0 \le \mathtt{i} < \mathit{len}$, then \texttt{fastmatch} returns 1. If $\mathit{pin}(i) \ne \mathit{guess}(i)$ for any \texttt{i}, then \texttt{fastmatch} returns 0. In other words, \texttt{fastmatch} is nothing more than a conjunction over equality literals, which we can easily implement using straight-line code in the loop.
-\\[-1ex]
+One way of accomplishing this is to carry the computation of the loop forward through to the greatest number of iterations the loop can take. Looking at \texttt{fastmatch}, we can think of it as nothing more than an aggregate of Boolean expressions: when all of the elements are equal, and the arrays are the same length, then \verb'fastmatch' returns \verb'true'. 
+In other words, \texttt{fastmatch} is nothing more than a conjunction over equality literals, which we can implement quickly by aggregating the exclusive-or of each element, along with the lengths, and returning true whenever the result is 0 (i.e., all of the bits in both arrays are identical).
+
+\clearpage
 
 \lstset{language=C}
 \begin{lstlisting}
-i = 0;
-auth := 1;
-while(i < len) {
-	auth := auth & (pin(i) = guess(i));
-	i := i + 1;
+bool fastmatch(byte a[], size_t a_len, byte b[], size_t b_len) {
+  
+  size_t matched = a_len ^ b_len;
+
+  for (size_t i = 0; ((i < a_len) & (i < b_len)); i++) {
+    matched |= a[i] ^ b[i];
+  }
+ 
+  return matched == 0;
 }
 \end{lstlisting}
 
@@ -414,14 +450,18 @@ It is important to point out that any solution that leaves the conditional intac
 
 \lstset{language=C}
 \begin{lstlisting}
-i = 0;
-auth := 1;
-while(i < len) {
-	if(pin(i) != guess(i)) 
-		auth := 0;
-	else
-		auth := auth;
-	i := i + 1;
+bool fastmatch(byte a[], size_t a_len, byte b[], size_t b_len) {
+  
+  size_t matched = a_len ^ b_len;
+
+  for (size_t i = 0; ((i < a_len) & (i < b_len)); i++) {
+    if(a[i] != b[i]) 
+      matched = 1;
+    else
+      matched = matched;
+  }
+ 
+  return matched == 0;
 }
 \end{lstlisting}
 
@@ -435,6 +475,6 @@ In this version of the program, we still have control flow that is dependent on 
 \end{itemize}
 In short, although it may seem unnatural and difficult to write programs so that control flow never depends on secret values, if constant-time execution is needed for security then adhering to this discipline is probably the simplest and least error-prone approach compatible with conventional imperative languages.
 
-% \bibliographystyle{abbrv}
+\bibliographystyle{plainnat}
 \bibliography{bibliography}
 \end{document}
