added auth logic lecture

--- a/2021/lectures/17-authlogic.tex
+++ b/2021/lectures/17-authlogic.tex
@@ -563,5 +563,6 @@ is provable from the rules in Figure~\ref{fig:rules}.
 This proof is left as an exercise.
 \end{proof}
 
+\bibliographystyle{abbrv}
 \bibliography{bibliography}
 \end{document}
