--- a/2023/lectures/04-safetyproofs.tex
+++ b/2023/lectures/04-safetyproofs.tex
@@ -681,7 +681,7 @@ All we need to do is turn it into a sequent and start with this as the desired c
     {\linfer[assignb]
       {\linfer[assignb]
         {\linfer[assignb]
-          {\linfer
+          {\linfer[qear]
             {\linfer[qear]
               {\lclose}
               {\lsequent{x{=}a\land y{=}b} {y=b\land x=a}}
