fixed typo in section 6 of lecture 4

--- a/2026/lectures/04-dynamic.tex
+++ b/2026/lectures/04-dynamic.tex
@@ -374,7 +374,7 @@ variable''.
       $\omega[x \mapsto \omega\lbb e \rbb] \models Q(x)$ \` (3, by 2 and defn of $[\cdot]$) \\
 		  $\omega[x' \mapsto \omega\lbb e \rbb] \models Q(x')$ for fresh $x'$ \` (4, by 3 and $x'$ fresh) \\
 		  $\omega[x' \mapsto c] \models x' = e \rightarrow Q(x')$ for every $c \in \mathbb{Z}$  \` (5, by 4 and defn. $\rightarrow$) \\
-		  $\omega \models \forall x'.\, x' = e \arrow Q(x')$ \` (by defn.\ of $\forall$)
+		  $\omega \models \forall x'.\, x' = e \arrow Q(x')$ \` (6, by 5 and defn.\ of $\forall$)
 		\end{tabbing}
 
 		In the above, $Q(x')$ is the result of renaming the free occurrences of $x$ in $Q$ to the fresh variable $x'$.
