added homework 2, lecture 5

--- a/2026/lectures/bibliography.bib
+++ b/2026/lectures/bibliography.bib
@@ -109,7 +109,7 @@
   author =       {John Nolt},
   title =        {Free Logic},
   booktitle =    {The Stanford Encyclopedia of Philosophy},
-  crossref =  2010,
+  year =  2010,
   editor =    {Edward N. Zalta},
   edition =   {Fall 2021 edition},
   url =          {https://plato.stanford.edu/entries/logic-free/}}
